# sriod_ros_publisher

./: CMakeLists.txt  README.md  package.xml
launch/: sriod_ros_publisher.launch
msg/: SriodData.msg
source/: sriod_publisher_node.cpp
